[package]
name = "dy_tasksys"
version = "0.0.1"
authors = ["Jongmin Yun <jmyundev@gmail.com>"]
edition = "2018"
description = "Task system"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dy_tasksys"
path = "src/lib.rs"
doctest = true
bench = true
doc = true
harness = true
edition = "2018"
crate-type = ["lib"]

[dependencies]
thiserror = "1.0.24"
crossbeam-utils = "0.8.3"
crossbeam-deque = "0.8.0"

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assetions = true
overflow-checks = true
panic = "unwind"

[profile.test]
opt-level = 0
debug = 2
lto = false
debug-assetions = true
overflow-checks = true
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
debug-assetions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = true
